# optimum-quanto

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-commits.yml  conventional-commits.yml  linux-cpu-tests.yml  linux-cuda-tests.yml  linux-examples.yml  macos-metal-tests.yml  python-examples.yml  python-quality.yml  python-tests.yml  security.yml  stale.yml  test-compilation.yml
bench/: README.md  test_int_mm.py  test_int_mm_inductor.py
bench/generation/: README.md  benchmark.py  evaluate_configurations.py  evaluate_many_models.sh  evaluate_model.py  gen_barchart.py  latency.py  perplexity.py  prediction.py
bench/generation/metrics/: decode_latency.py  latency.py  perplexity.py  prediction.py  prefill_latency.py
bench/generation/setup/: awq.py  bnb.py  hqq.py  quanto.py
bench/kernels/: benchmark.py  benchmark_marlin_fp8.py  benchmark_w4a16.py  test_int_mm.py  test_int_mm_inductor.py  test_int_mm_torch_int.py
bench/torch_kernels/: README.md  test_int_mm.py  test_weight_int4pack_mm.py  test_weight_int8pack_mm.py
examples/: check_extension_compiled.py  quantize_bert_model.py  quantize_mnist_model.py
examples/nlp/code-generation/: README.md  quantize_code_model.py
examples/nlp/text-generation/: README.md  evaluate_many_models.sh  quantize_causal_lm_model.py
examples/speech/speech_recognition/: quantize_asr_model.py  requirements.txt
examples/vision/StableDiffusion/: READMD.md  README.md  quantize_StableDiffusion.py  requirements.txt
examples/vision/object-detection/: quantize_owl_model.py
examples/vision/text-to-image/: quantize_pixart_sigma.py
optimum/quanto/: __init__.py  calibrate.py  quantize.py  serialization.py
optimum/quanto/models/: __init__.py  causal_lm.py  diffusers_models.py  hub_utils.py  shared_dict.py  transformers_models.py
optimum/quanto/nn/: qconv2d.py  qlayernorm.py  qlinear.py  qmodule.py
optimum/quanto/tensor/: __init__.py  core.py  function.py  packed.py  qactivation.py  qbits.py  qbytes.py  qbytes_ops.py  qdynamic.py  qtensor.py  qtensor_func.py  qtype.py  qweight.py
quanto/: __init__.py  calibrate.py  quantize.py  serialization.py
quanto/nn/: __init__.py  qconv2d.py  qlayernorm.py  qlinear.py  qmodule.py
quanto/qtensor/: core.py  func.py  ops.py
quanto/quantization/: __init__.py  calibrate.py  qtensor.py  quantize.py  tensor.py
quanto/quantization/nn/: __init__.py  layernorm.py  linear.py  qactivation.py  qlayernorm.py  qlinear.py  qmodule.py
quanto/quantization/qtensor/: core.py  func.py  ops.py
quanto/tensor/: __init__.py  core.py  func.py  ops.py  packed.py  qactivation.py  qbits.py  qbits_ops.py  qbitstensor.py  qbytes.py  qbytes_ops.py  qtensor.py  qtensor_func.py  qtype.py  qweight.py
quanto/tensor/optimizers/: __init__.py  absmax_optimizer.py  affine_optimizer.py  max_optimizer.py  mse_optimizer.py  optimizer.py  symmetric_optimizer.py
quanto/tensor/qbits/: __init__.py  qbits.py  qbits_ops.py
quanto/tensor/quantizers/: __init__.py  affine.py  symmetric.py
test/: conftest.py  helpers.py  test_quantized_dispatch.py  test_quantized_module.py  test_quantized_tensor.py  test_serialization.py
test/cli/: test_quantize_cli.py
test/model/: test_quantize_mlp.py  test_requantize_mlp.py
test/models/: conftest.py  test_quantized_model_for_causal_lm.py  test_quantized_model_for_flux.py  test_quantized_model_for_pixart.py
test/nn/: test_calibrate.py  test_custom_qmodule.py  test_qattention.py  test_qconv2d.py  test_qlayernorm.py  test_qlinear.py  test_qmodule.py
test/qtensor/: test_absmax.py  test_compile.py  test_quantized_dispatch.py  test_quantized_tensor.py
test/qtensor/ops/: test_linear_dispatch.py  test_mm_dispatch.py  test_quantized_dispatch.py
test/quantize/: test_quantize_mlp.py  test_quantize_patterns.py  test_requantize.py
test/tensor/: test_absmax.py  test_compile.py  test_marlin.py  test_packed_tensor.py  test_qbitstensor.py  test_qbytestensor.py  test_qtensor.py  test_quantized_dispatch.py
test/tensor/activations/: test_activations_compile.py  test_activations_quantize.py
test/tensor/awq/: test_awq_tensor.py
test/tensor/ops/: test_linear_dispatch.py  test_mm_dispatch.py  test_packedtensor_dispatch.py  test_qactivation_dispatch.py  test_qbitstensor_dispatch.py  test_qtensor_dispatch.py  test_quantized_dispatch.py  test_qweight_dispatch.py
test/tensor/optimizers/: test_hqq_optimizer.py
test/tensor/qbits/: test_awq_qbits_tensor.py  test_packed_tensor.py  test_qbits_instantiate.py  test_qbits_tensor_quantize.py  test_qbitstensor_dispatch.py  test_tinygemm_packed_tensor.py  test_tinygemm_qbits_tensor.py
test/tensor/qbytes/: test_qbytes_tensor_quantize.py
test/tensor/quantizers/: test_affine.py  test_symmetric.py
test/tensor/weights/: test_weight_qbits_tensor.py  test_weight_qbits_tensor_dispatch.py  test_weight_qbits_tensor_instantiate.py  test_weight_qbits_tensor_quantize.py  test_weight_qbytes_tensor_quantize.py  test_weight_qbytes_tensor_serialization.py  test_weights_backward.py  weight_helpers.py  (+4 more)
tests/: helpers.py
tests/cli/: cli_helpers.py
tests/nn/: test_calibrate.py  test_qconv2d.py  test_qlayernorm.py  test_qlinear.py
tests/tensor/: test_absmax.py  test_packed_tensor.py
(+84 files in other folders)
