[project]
name = 'quanto'
description = 'A quantization toolkit for pytorch.'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Artificial Intelligence'
]
keywords = ['torch', 'quantization']
requires-python = '>=3.8.0'
authors = [{ name = 'David Corvoysier', email = 'david@huggingface.co' }]
dependencies = ['torch>=2.2.0', 'ninja']
license = { text = 'Apache-2.0' }
dynamic = ['readme', 'version']

[project.urls]
homepage = 'https://github.com/huggingface/quanto'

[project.optional-dependencies]
dev = ['pytest', 'ruff', 'black']

[tool.setuptools.dynamic]
version = {attr = "quanto.__version__"}

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["quanto"]
